--- a/src/app/shared/auth/authright/authright.component.html
+++ b/src/app/shared/auth/authright/authright.component.html
@@ -1,8 +1,8 @@
 <div class="row h-100">
     <div class="col-12 h-50 position-relative">
         <!-- time and temperature -->
-        <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1182810338555596880/login_portada_altux.png?ex=65860cf8&is=657397f8&hm=82c0f740e60bb06e1a063a856420addc3e6c712c1b6ee37f2cc91fbdbfec7bac&');">
-            <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182810338555596880/login_portada_altux.png?ex=65860cf8&is=657397f8&hm=82c0f740e60bb06e1a063a856420addc3e6c712c1b6ee37f2cc91fbdbfec7bac&" alt="" id="image-daytime" class="w-100 d-none" />
+        <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/infinity/Login/login_portada_altux.png');">
+            <img src="https://web-altux-files.s3.amazonaws.com/infinity/Login/login_portada_altux.png" alt="" id="image-daytime" class="w-100 d-none" />
         </div>
         <div class="row text-white mt-2">
             <div class="col text-center">
@@ -29,8 +29,8 @@
             <ng-template swiperSlide>
                 <div class="overlay"></div>
                 <div class="row h-100 position-relative mx-0 pb-5">
-                    <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1182814055002542140/slider_login_5.png?ex=6586106e&is=65739b6e&hm=2b61c6d7ddf6131c725c6ba1e7207c950933fe2fd68cd3e766f455d22b5b381d&');">
-                        <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182814055002542140/slider_login_5.png?ex=6586106e&is=65739b6e&hm=2b61c6d7ddf6131c725c6ba1e7207c950933fe2fd68cd3e766f455d22b5b381d&" alt="" class="w-100 d-none" />
+                    <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login1.png');">
+                        <img src="https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login1.png" alt="" class="w-100 d-none" />
                     </div>
                     <div class="col-12"></div>
                     <!-- <div class="col-12 mt-auto">
@@ -43,8 +43,8 @@
             <ng-template swiperSlide>
                 <div class="overlay"></div>
                 <div class="row h-100 position-relative mx-0 pb-5">
-                    <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1182814055841411142/slider_login_2.png?ex=6586106e&is=65739b6e&hm=4ec7621d2c7cef6f3517451e4b2ecaf4ccffe3d27a2636d159d4440d80fe0593&');">
-                        <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182814055841411142/slider_login_2.png?ex=6586106e&is=65739b6e&hm=4ec7621d2c7cef6f3517451e4b2ecaf4ccffe3d27a2636d159d4440d80fe0593&" alt="" class="w-100 d-none" />
+                    <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_2.png');">
+                        <img src="https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_2.png" alt="" class="w-100 d-none" />
                     </div>
                     <div class="col-12"></div>
                     <!-- <div class="col-12 mt-auto">
@@ -62,13 +62,13 @@
         <!-- image swiper -->
         <swiper [slidesPerView]="1" [spaceBetween]="0" [pagination]="false" [autoplay]="{delay: 2500}" class="image-swiper h-100 w-100">
             <ng-template swiperSlide>
-                <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1182812368166723696/slider_login1.png?ex=65860edc&is=657399dc&hm=13c45a3280d3a5e4e3ff23eccdd12088f64525030f6f834f8b32cf429d1fec65&');">
-                    <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182812368166723696/slider_login1.png?ex=65860edc&is=657399dc&hm=13c45a3280d3a5e4e3ff23eccdd12088f64525030f6f834f8b32cf429d1fec65&" alt="" style="display: none;" />
+                <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_4.png');">
+                    <img src="https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_4.png" alt="" style="display: none;" />
                 </div>
             </ng-template>
             <ng-template swiperSlide>
-                <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1182814055396823070/slider_login_4.png?ex=6586106e&is=65739b6e&hm=5e52ea3dbf3f4b919250819a859f9ccc5007355f56b6928dca08e23da6656b88&');">
-                    <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182814055396823070/slider_login_4.png?ex=6586106e&is=65739b6e&hm=5e52ea3dbf3f4b919250819a859f9ccc5007355f56b6928dca08e23da6656b88&" alt="" style="display: none;" />
+                <div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_5.png');">
+                    <img src="https://web-altux-files.s3.amazonaws.com/infinity/Login/slider_login_5.png" alt="" style="display: none;" />
                 </div>
             </ng-template>
         </swiper>
