--- a/src/app/cobranza/pages/cobros/cobros.component.html
+++ b/src/app/cobranza/pages/cobros/cobros.component.html
@@ -49,58 +49,58 @@
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[0].fecha_activa, else M01" class="parpadea text-danger">
-                                            M01 <br> {{detalle_fecha[0].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C01 <br> {{detalle_fecha[0].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M01>
-                                            M01 <br> {{detalle_fecha[0].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C01 <br> {{detalle_fecha[0].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[1].fecha_activa, else M02" class="parpadea text-danger">
-                                            M02 <br> {{detalle_fecha[1].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C02 <br> {{detalle_fecha[1].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M02>
-                                            M02 <br> {{detalle_fecha[1].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C02 <br> {{detalle_fecha[1].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[2].fecha_activa, else M03" class="parpadea text-danger">
-                                            M03 <br> {{detalle_fecha[2].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C03 <br> {{detalle_fecha[2].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M03>
-                                            M03 <br> {{detalle_fecha[2].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C03 <br> {{detalle_fecha[2].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[3].fecha_activa, else M04" class="parpadea text-danger">
-                                            M04 <br> {{detalle_fecha[3].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C04 <br> {{detalle_fecha[3].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M04>
-                                            M04 <br> {{detalle_fecha[3].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C04 <br> {{detalle_fecha[3].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[4].fecha_activa, else M05" class="parpadea text-danger">
-                                            M05 <br> {{detalle_fecha[4].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C05 <br> {{detalle_fecha[4].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M05>
-                                            M05 <br> {{detalle_fecha[4].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C05 <br> {{detalle_fecha[4].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[5].fecha_activa, else M06" class="parpadea text-danger">
-                                            M06 <br> {{detalle_fecha[5].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C06 <br> {{detalle_fecha[5].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M06>
-                                            M06 <br> {{detalle_fecha[5].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C06 <br> {{detalle_fecha[5].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
                                         <div *ngIf="detalle_fecha[6].fecha_activa, else M07" class="parpadea text-danger">
-                                            M07 <br> {{detalle_fecha[6].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C07 <br> {{detalle_fecha[6].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </div>
                                         <ng-template #M07>
-                                            M07 <br> {{detalle_fecha[6].fecha_vencimiento *1000 | date:'dd/MM/y' }}
+                                            C07 <br> {{detalle_fecha[6].fecha_vencimiento *1000 | date:'dd/MM/y' }}
                                         </ng-template>
                                     </th>
                                     <th>
@@ -112,7 +112,7 @@
                                         </ng-template>
                                     </th>
                                     <th>Deuda</th>
-                                    <th>MV</th>
+                                    <th>CV</th>
                                     <th>Total</th>
                                     <th>Acc</th>
                                 </tr>
@@ -122,16 +122,16 @@
                                     <th>Celular</th>
                                     <th>DNI</th>
                                     <th>Mat</th>
-                                    <th>M01</th>
-                                    <th>M02</th>
-                                    <th>M03</th>
-                                    <th>M04</th>
-                                    <th>M05</th>
-                                    <th>M06</th>
-                                    <th>M07</th>
+                                    <th>C01</th>
+                                    <th>C02</th>
+                                    <th>C03</th>
+                                    <th>C04</th>
+                                    <th>C05</th>
+                                    <th>C06</th>
+                                    <th>C07</th>
                                     <th>Cert</th>
                                     <th>Deuda</th>
-                                    <th>MV</th>
+                                    <th>CV</th>
                                     <th>Total</th>
                                     <th>Acc</th>
                                 </tr>
@@ -314,26 +314,26 @@
                                             data-bs-toggle="tooltip" data-bs-placement="right" title="Detalle Pagos">
                                             <i class="bi bi-currency-dollar"></i>
                                         </a>
-                                        <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" 
+                                        <!-- <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" 
                                             title="Pronto Pago" (click)="prontoPago(valstudents.sales_id, valstudents)">
                                             <i class="bi bi-bag-check-fill"></i>
-                                        </a>
-                                        <a class="" href="javascript:void(0);" (click)="openModalCompromiso(valstudents)"
+                                        </a> -->
+                                        <a class="mx-1" href="javascript:void(0);" (click)="openModalCompromiso(valstudents)"
                                             data-bs-toggle="tooltip" data-bs-placement="right" title="Compromiso de Pago">
                                             <i class="bi bi-calendar-week"></i>
                                         </a>
-                                        <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Modificar Estudiante" 
+                                        <!-- <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Modificar Estudiante" 
                                             (click)="openModal(valstudents.id, valstudents.nombres, valstudents.cuotas)">
                                             <i class="bi bi-pencil-square"></i>
-                                        </a>
+                                        </a> -->
                                         <a class="" href="javascript:void(0);" (click)="reportStudent(valstudents.id, valstudents.nombres)" 
-                                            data-bs-toggle="tooltip" data-bs-placement="right" title="Asistencia">
+                                            data-bs-toggle="tooltip" data-bs-placement="right" title="Información Alumno">
                                             <i class="bi bi-person-square"></i>
                                         </a>
-                                        <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" 
+                                        <!-- <a class="text-dark mx-2" href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" 
                                             title="Historial Estudiante" (click)="openModalControl(valstudents.id, valstudents.nombres)">
                                             <i class="bi bi-three-dots-vertical"></i>
-                                        </a>
+                                        </a> -->
                                     </td>
                                 </tr>
                                 </tbody>
