--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -11,23 +11,25 @@
                         <p class="text-secondary small">Leads - Fichas - Matriculas</p>
                     </div>
                     <div class="col-auto">
+                        <button class="btn btn-success text-light mx-2" (click)="openModalLeads()" *ngIf="user=='SANDRA MARIA'">
+                            <i class="bi bi-plus"></i> Leads</button>
                         <button class="btn btn-theme" (click)="openModal()"><i class="bi bi-plus"></i> Registrar</button>
                     </div>
                 </div>
             </div>
             <div class="card-body py-3">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12" *ngIf="leads">
                         <div class="panel panel-primary">
                             <div class="tab-menu-heading">
-                                <div class="tabs-menu ">
+                                <div class="tabs-menu">
                                     <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav">
                                         <li class="me-2 mb-1" [ngbNavItem]="1">
                                             <a ngbNavLink><i class="bi bi-star-fill"></i> Leads</a>
                                             <ng-template ngbNavContent>
                                                 <div class="tab-pane">
                                                     <br>
-                                                    <app-leads></app-leads>
+                                                    <app-leads [estado_leads]="leads"></app-leads>
                                                 </div>
                                             </ng-template>
                                         </li>
@@ -845,6 +847,56 @@
             <hr>
         </div>
     </form> -->
+</ng-template>
+<!-- Modal Leads-->
+<ng-template #modal_leads let-modal>
+    <div class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
+        <div class="card-header">
+            <h5 class="mb-1 title">Registro Leads</h5>
+        </div>
+        <div class="card-body modal-body">
+            <div class="row">
+                <div class="col-12 col-md-6 mb-4 text-center">
+                    <ngx-dropzone (change)="onSelect($event)" class="dropzone">
+                        <ngx-dropzone-label>
+                            <i class="bi bi-cloud-arrow-up h2 avatar avatar-80 rounded-circle bg-light-theme mb-3"></i>
+                            <h5>Subir Archivo</h5>
+                        </ngx-dropzone-label>
+                    </ngx-dropzone>
+                </div>
+                <div class="col-12 col-md-6 mb-4" *ngIf="files.length">
+                    <div class="row gx-2 mb-4" *ngFor="let f of files">
+                        <div class="col-auto">
+                            <div class="avatar avatar-40 rounded bg-green text-white">
+                                <i class="bi bi-filetype-xml h5 vm"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="mb-0">{{ f.name }}</p>
+                            <p class="small text-secondary">{{ +f.size.toFixed(2) }} mb</p>
+                        </div>
+                        <div class="col-auto">
+                            <button class="btn btn-square btn-link text-danger" (click)="onRemove($event)">
+                                <i class="bi bi-x-circle"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="row">
+                <div class="col-auto">
+                    <button class="btn btn-sm btn-theme" (click)="uploadLeads()" *ngIf="files.length">Registrar</button>
+                    <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModalLeads()">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="modal-header">
+        <img src="https://web-altux-files.s3.amazonaws.com/LOGO_ALTUX_WEB.png" alt="" style="width: 25% !important;">
+        <button type="button" class="btn-close pull-right" style="color: black" aria-label="Close" (click)="closeModalInfo()"></button>
+    </div> -->
 </ng-template>
 <!-- Modal Pago-->
 <ng-template #modal_pago let-modal>
